# a_collective_essay_of_real_character

./: .gitignore  LICENSE  README.md
a_journalist_of_real_character/: README.md  pyproject.toml
a_journalist_of_real_character/prompt_skeleton/: prompt_skeleton.md
a_journalist_of_real_character/src/a_journalist_of_real_character/: __init__.py  main.py  read_parse_write.py
leader_summary/: leader_summary.md
question_sheet/: group_1_2.md  group_3_4.md
transcript/: group_1.md  group_2.md  group_3.md  group_4.md
